--- a/src/main/resources/templates/inquiry/form_boot.html
+++ b/src/main/resources/templates/inquiry/form_boot.html
@@ -35,6 +35,27 @@
 		</div>
 	</div>
 	
+	<!-- 簡略化 
+	<form method="post" action="#" th:action="@{/inquiry/confirm}" th:object="${inquiryForm}">
+	  <div class="form-group">
+	    <label for="name">お名前</label>
+	    <input type="text" th:field="*{name}">
+	  </div>
+	  <div class="text-danger mb-4" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+	  <div class="form-group">
+	    <label for="email">メール</label>
+	    <input type="text" th:field="*{email}">
+	  </div>
+	  <div class="text-danger mb-4" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+	  <div class="form-group">
+	    <label for="contents">Inquiry</label>
+	    <textarea name="contents" class="form-control" id="detail" rows="3" th:field="*{contents}"></textarea>
+	  </div>
+	  <div class="text-danger mb-4" th:if="${#fields.hasErrors('contents')}" th:errors="*{contents}"></div>
+	  <button type="submit" class="btn btn-primary">確認する</button>
+	</form>
+	-->
+	
 	<form method="post" action="#" th:action="@{/inquiry/confirm}" th:object="${inquiryForm}">
 	  <div class="form-group">
 	    <label for="name">お名前</label>
@@ -53,6 +74,8 @@
 	  <div class="text-danger mb-4" th:if="${#fields.hasErrors('contents')}" th:errors="*{contents}"></div>
 	  <button type="submit" class="btn btn-primary">確認する</button>
 	</form>
+	
+	
     </main><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
